# allocator

./: .travis.yml  CMakeLists.txt  README.md
includes/: IO.h  StackLinkedList.h  allocator_traits.hpp  arena.h  arena_allocator.h  custom_vector_container.h  myAllocator.hpp  my_allocator.hpp  pretty.h
src/: main.cpp
test/: test_myAllocator.cpp  test_my_allocator.cpp
